tests/specs/ecosystem/ydcjeff/ezedge/0_0_2.test
ydcjeff/ezedge/0.0.2
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'HTMLElement'.
 */ export function start_client(fn: (el: HTMLElement, hydratable: boolean, data: unknown | null) => void): void {}
                                          ~~~~~~~~~~~
    at file://<tmpdir>/runtime/mod.ts:5:43

